# C-practice

./: CMakeLists.txt  README.md  lesson2.c  lesson3.c  lesson4.c  lesson5.c  lesson6.c  lesson7-1.c  lesson7-2.c  lesson7-3.c  lesson7-4.c  lesson7-5.c  lesson8-2.c  lesson8-3.c  lesson8-4.c  lesson8-5a.c  lesson8-5b.c  lesson9.c
