cmake_minimum_required(VERSION 3.19)
project(c_practice C)

set(CMAKE_C_STANDARD 99)


add_executable(c_practice-main main.c)
add_executable(c_practice-lesson2 lesson2.c)
add_executable(c_practice-lesson3 lesson3.c)
add_executable(c_practice-lesson4 lesson4.c)
add_executable(c_practice-lesson5 lesson5.c)
add_executable(c_practice-lesson6 lesson6.c)
add_executable(c_practice-lesson7 lesson7-1.c)

