cmake_minimum_required(VERSION 3.19)
project(c_practice C)

set(CMAKE_C_STANDARD 99)


add_executable(c_practice-main main.c)
add_executable(c_practice-lesson2 lesson2.c)
add_executable(c_practice-lesson3 lesson3.c)
add_executable(c_practice-lesson4 lesson4.c)
add_executable(c_practice-lesson5 lesson5.c)
add_executable(c_practice-lesson6 lesson6.c)
add_executable(c_practice-lesson7-1 lesson7-1.c)
add_executable(c_practice-lesson7-2 lesson7-2.c)
add_executable(c_practice-lesson7-3 lesson7-3.c)
add_executable(c_practice-lesson7-4 lesson7-4.c)
add_executable(c_practice-lesson7-5 lesson7-5.c)
add_executable(c_practice-lesson8-1 lesson8-1.c)
add_executable(c_practice-lesson8-2 lesson8-2.c)
add_executable(c_practice-lesson8-3 lesson8-3.c)
add_executable(c_practice-lesson8-4 lesson8-4.c)
add_executable(c_practice-lesson8-5a lesson8-5a.c)
add_executable(c_practice-lesson8-5b lesson8-5b.c)
add_executable(c_practice-lesson9 lesson9.c)
